Allows filtering by CKAN Organization on organization

--- a/contrib/config/pycsw/default.cfg
+++ b/contrib/config/pycsw/default.cfg
@@ -38,6 +38,7 @@ contact_role = pointOfContact
 [repository]
 database = POSTGRES_CONN_STRING
 table = records
+mappings = /etc/ckan/default/mappings.py
 
 [metadata:inspire]
 enabled = false
